// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries: commentsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequest {
            id
            
    comments(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          author {
            login
            url
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;

exports[`queries: reviewCommentsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequestReview {
            id
            
    comments(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          author {
            login
            url
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;

exports[`queries: reviewsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequest {
            id
            
    reviews(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          id
          state
          author {
            login
            url
          }
          
    comments(first: 10 ) {
      edges {
        node {
          author {
            login
            url
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;
